--- a/shop/src/App.css
+++ b/shop/src/App.css
@@ -1,32 +1,26 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.pageLayout {
+  height: 900px;
+  width: 1000px;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pageContainer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+}
+
+.productsList {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  width: 800px;
+  flex-wrap: wrap;
 }
