--- a/shop/src/presentational/menu.css
+++ b/shop/src/presentational/menu.css
@@ -1,9 +1,8 @@
 .menu {
-  margin: 10px;
+  margin: 10px 0 50px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 50px;
   width: 1168px;
   height: 29px;
 }
