--- a/shop/src/presentational/productDetail.css
+++ b/shop/src/presentational/productDetail.css
@@ -14,8 +14,8 @@
 }
 
 .productDetailImageArea {
-  /* width: 320px;
-  height: 464px; */
+  height: 300px;
+  width: 500px;
 }
 
 .productDetailImage {
