--- a/shop/src/presentational/productList.css
+++ b/shop/src/presentational/productList.css
@@ -8,7 +8,7 @@
 
 .pages {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
 }
 
@@ -18,6 +18,7 @@
 }
 
 .pagesItem {
+  margin: 0 5px;
   width: 24px;
   height: 17px;
   opacity: 0.4;
@@ -27,4 +28,10 @@
   font-weight: 400;
   line-height: 27px;
   letter-spacing: 1.2px;
+}
+
+.pageArrowRight {
+  line-height: 28px;
+  opacity: 0.4;
+  margin: 0 5px;
 }
