--- a/shop/src/containers/sideBar.css
+++ b/shop/src/containers/sideBar.css
@@ -1,3 +1,16 @@
+.sideBar {
+  width: 40%;
+}
+
 .sideBarItem {
+  list-style: none;
+  margin: 5px 0;
+  height: 20px;
+  opacity: 0.5;
+  color: #000000;
+  /* font-family: "Myriad Pro"; */
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
   cursor: pointer;
 }
