--- a/shop/src/presentational/footer.css
+++ b/shop/src/presentational/footer.css
@@ -1,43 +1,43 @@
-.menu {
-  margin: 10px 0 50px 0;
+.footer {
+  /* margin: 10px 0 50px 0; */
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 30px;
+  width: 620px;
+  position: fixed;
+  bottom: 50px;
 }
 
-.logoArea {
-  width: 80px;
+.allRightsArea {
+  width: 141px;
   height: 100%;
+  line-height: 40px;
+  opacity: 0.5;
+  font-size: 10px;
 }
 
-.logoPicture {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-
-.menuArea {
+.footerArea {
   display: flex;
   justify-content: flex-end;
   height: 100%;
   flex: 2;
 }
 
-.menuList {
+.footerList {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   list-style: none;
 }
 
-.menuItem {
+.footerItem {
   margin: 0 10px;
   height: 12px;
   opacity: 0.5;
   color: #000000;
   font-family: "Myriad Pro";
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 26px;
   text-transform: uppercase;
@@ -45,12 +45,6 @@
   cursor: pointer;
 }
 
-.menuItem--Active {
+.footerItem--Active {
   opacity: inherit;
-}
-
-.cartIcon {
-  line-height: 25px;
-  height: 40px;
-  opacity: 0.5;
 }
