--- a/shop/src/containers/sideBar.css
+++ b/shop/src/containers/sideBar.css
@@ -2,15 +2,22 @@
   width: 40%;
 }
 
+.sideBarList {
+  padding-top: 5px;
+  height: 150px;
+  width: 200px;
+  border-bottom: 1px solid rgba(0, 0, 0, .5);
+}
+
 .sideBarItem {
   list-style: none;
-  margin: 5px 0;
+  margin: 10px 0;
   height: 20px;
-  opacity: 0.5;
+  opacity: 0.7;
   color: #000000;
-  /* font-family: "Myriad Pro"; */
-  font-size: 16px;
+  font-family: "Myriad Pro";
+  font-size: 14px;
   font-weight: 400;
-  line-height: 26px;
+  letter-spacing: 1.15px;
   cursor: pointer;
 }
