--- a/shop/src/presentational/footer.css
+++ b/shop/src/presentational/footer.css
@@ -1,27 +1,17 @@
 .footer {
-  /* margin: 10px 0 50px 0; */
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 30px;
-  width: 620px;
-  position: fixed;
-  bottom: 50px;
+  margin: 10px 0 50px 0;
 }
 
 .allRightsArea {
-  width: 141px;
-  height: 100%;
   line-height: 40px;
   opacity: 0.5;
   font-size: 10px;
+  width: 150px;
+  display: inline-block;
 }
 
 .footerArea {
-  display: flex;
-  justify-content: flex-end;
-  height: 100%;
-  flex: 2;
+  float: right;
 }
 
 .footerList {
