--- a/shop/src/presentational/menu.css
+++ b/shop/src/presentational/menu.css
@@ -1,5 +1,5 @@
 .menu {
-  margin: 10px 0 50px 0;
+  margin: 10px 0 30px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -49,8 +49,26 @@
   opacity: inherit;
 }
 
+.cartIconArea {
+  position: relative;
+}
+
 .cartIcon {
   line-height: 25px;
   height: 40px;
-  opacity: 0.5;
+}
+
+.productsInCart {
+  letter-spacing: 0;
+  color: #000000;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: #d3cdc9;
+  position: absolute;
+  bottom: -30px;
+  left: 10px;
+  opacity: 0.7;
+  text-align: center;
+  line-height: 35px;
 }
