adjusted styles, fixed routing, products added

--- a/shop/src/presentational/cart.css
+++ b/shop/src/presentational/cart.css
@@ -20,12 +20,15 @@
 .cartImageArea {
   height: 250px;
   width: 35%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cartProductImage {
   object-fit: cover;
-  height: auto;
-  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .cartProductDescriptions {
@@ -38,11 +41,11 @@
 }
 
 .cartProductTitle {
-  height: 18px;
+  height: 22px;
   color: #000000;
   font-family: "Myriad Pro";
   font-size: 24px;
-  font-weight: 400;
+  font-weight: bold;
   line-height: 27px;
   letter-spacing: 1.2px;
   margin-bottom: 18px;
