--- a/shop/src/presentational/productDetail.css
+++ b/shop/src/presentational/productDetail.css
@@ -7,21 +7,21 @@
 }
 
 .productDetailContainer {
-  height: 300px;
+  height: 450px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .productDetailImageArea {
-  height: 300px;
+  height: 450px;
   width: 450px;
 }
 
 .productDetailImage {
   object-fit: cover;
-  height: auto;
-  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .productDetailDescriptions {
@@ -59,7 +59,7 @@
 
 .productDetailText {
   width: 509px;
-  height: 152px;
+  height: 250px;
   color: #000000;
   font-family: "Myriad Pro";
   font-size: 18px;
