--- a/shop/src/containers/homeLayout.css
+++ b/shop/src/containers/homeLayout.css
@@ -45,3 +45,11 @@
   background-color: white;
   height: 30px;
 }
+
+@media(min-width: 426px) and (max-width: 768px) {
+  #root {
+    width: 800px;
+    padding: 0 20px;
+  }
+
+}
