--- a/shop/src/presentational/cart.css
+++ b/shop/src/presentational/cart.css
@@ -149,3 +149,45 @@
   display: flex;
   justify-content: flex-end;
 }
+
+@media(min-width: 426px) and (max-width: 768px) {
+  .cartComponent {
+    width: 800px;
+    height: 400px;
+    margin: 20px 0;
+
+  }
+
+  .cartContainer {
+    flex-direction: column;
+    height: 400px;
+  }
+
+  .cartProductDescriptions {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding-left: 0;
+  }
+
+  .cartImageArea {
+    height: 450px;
+    width: auto;
+  }
+
+  .cartProductTitle {
+    padding: 20px 0;
+  }
+
+  .cartProductText {
+    text-overflow: clip;
+    overflow: initial;
+  }
+
+  .cartDelProductButton {
+    position: initial;
+    height: 20px;
+    line-height: 25px;
+    padding-top: 15px;
+  }
+}
