--- a/shop/src/containers/homeLayout.css
+++ b/shop/src/containers/homeLayout.css
@@ -51,5 +51,11 @@
     width: 800px;
     padding: 0 20px;
   }
+}
 
+@media(max-width: 425px) {
+  #root {
+    width: 600px;
+    padding: 0 20px;
+  }
 }
