--- a/shop/src/presentational/productDetail.css
+++ b/shop/src/presentational/productDetail.css
@@ -89,7 +89,7 @@
   cursor: none;
 }
 
-@media(min-width: 426px) and (max-width: 768px) {
+@media(max-width: 768px) {
   .productDetailContainer {
     flex-direction: column-reverse;
     justify-content: flex-end;
